--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -22,12 +22,12 @@ header {
 /* Header Socials styling */
 
 .header__socials {
-display: flex;
-flex-direction: column;
-align-items: center;
-gap: 0.9rem;
-position: absolute ;
-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.9rem;
+  position: absolute;
+  bottom: 3rem;
 }
 
 .header__socials::after {
@@ -48,8 +48,8 @@ bottom: 3rem;
 }
 
 .profile-pic {
-  -webkit-box-shadow: 0 0 10px #4db5ff ;
-        box-shadow: 0 0 10px var(--color-primary);
+  -webkit-box-shadow: 0 0 10px #4db5ff;
+  box-shadow: 0 0 10px var(--color-primary);
   border: none;
   border-radius: 12rem;
 }
@@ -58,7 +58,7 @@ bottom: 3rem;
 
 .scroll__down {
   position: absolute;
-  right:  -2.3rem;
+  right: -2.3rem;
   bottom: 8rem;
   transform: rotate(90deg);
   font-weight: 500;
@@ -66,22 +66,20 @@ bottom: 3rem;
   color: var(--color-primary);
 }
 
-
 /* MEDIA QUERIES (MEDIUM DEVICES) */
-@media screen and (max-width:1024px){
- header {
- height: 100vh;
- }
+@media screen and (max-width: 1024px) {
+  header {
+    height: 100vh;
+  }
 }
 /* MEDIA QUERIES (SMALL DEVICES) */
-@media screen and (max-width:600px){
+@media screen and (max-width: 600px) {
   header {
     height: 100vh;
   }
 
-
-
-  .header__socials, .scroll__down {
+  .header__socials,
+  .scroll__down {
     display: none;
   }
 }
