--- a/src/Components/recomendations/Recomendations.css
+++ b/src/Components/recomendations/Recomendations.css
@@ -5,11 +5,10 @@
 .testimonial {
   background: var(--color-bg-variant);
   text-align: center;
-  padding: 2rem;
+  padding: 1rem;
   border-radius: 2rem;
   user-select: none;
-  padding-bottom: 3rem;
-  
+  padding-bottom: 2rem;
 }
 
 .testimonial h3 {
@@ -27,14 +26,14 @@
 
 .collegue__recomendation {
   color: var(--color-light);
-  font-weight: 300px;
+  /* font-weight: 300px; */
   display: block;
   width: 80%;
-  margin: 0.8rem auto 0;
+  margin: auto;
 }
 
 .swiper-pagination-clickable .swiper-pagination-bullet {
-  background:var(--color-primary);
+  background: var(--color-primary);
   width: 20px;
   height: 20px;
 }
@@ -46,9 +45,7 @@
   opacity: 1;
 }
 
-
 @media screen and (max-width: 1024px) {
-  
   .testimonials__container {
     width: 60%;
   }
@@ -63,7 +60,7 @@
   }
 
   #recomendations {
-    margin-top: 2750px;
+    margin-top: 2900px;
   }
 
   .collegue__recomendation {
